--- a/BlazorExecutionFlow/Components/BlazorExecutionFlowGraph.razor
+++ b/BlazorExecutionFlow/Components/BlazorExecutionFlowGraph.razor
@@ -1,6 +1,6 @@
 ﻿@namespace BlazorExecutionFlow.Components
-@using BlazorExecutionFlow.Drawflow.Attributes
-@using BlazorExecutionFlow.Drawflow.BaseNodes 
+@using BlazorExecutionFlow.Flow.Attributes
+@using BlazorExecutionFlow.Flow.BaseNodes 
 @using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
