--- a/ExampleApp/Components/Pages/Home.razor
+++ b/ExampleApp/Components/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using BlazorExecutionFlow.Components
-@using BlazorExecutionFlow.Drawflow.BaseNodes
+@using BlazorExecutionFlow.Flow.BaseNodes
 @using BlazorExecutionFlow.Helpers
 @using BlazorExecutionFlow.Models
 @using BlazorExecutionFlow.Models.NodeV2
